--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -35,32 +37,57 @@
       'Berne, Eric', 'Berra, Yogi', 'Berry, Wendell', 'Bevan, Aneurin', 'Ben-Gurion, David', 'Bevel, Ken', 'Biden, Joseph', 'Bennington, Chester', 'Bierce, Ambrose',
       'Billings, Josh', 'Birrell, Augustine', 'Blair, Tony', 'Beecher, Henry', 'Biondo, Frank'
     ];
-    
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventors1500 = inventors.filter((inventor) => inventor.year >= 1500 && inventor.year < 1600)
+    console.log(inventors1500)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const inventorNames = inventors.map((inventor) => inventor.first + " " + inventor.last)
+    console.log(inventorNames)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const inventorsByBirthdate = inventors.slice().sort((inventor, nextInventor) => inventor.year - nextInventor.year)
+    console.log(inventorsByBirthdate)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const sumOfAge = inventors.reduce((total, currentInventor) => {
+      return total + (currentInventor.passed - currentInventor.year)
+    }, 0)
+    console.log(sumOfAge)
 
     // 5. Sort the inventors by years lived
+    const inventorsYoungestToOldest = inventors.slice().sort((inventor, nextInventor) => {
+      return (inventor.passed - inventor.year) - (nextInventor.passed - nextInventor.year)
+    })
+    console.log(inventorsYoungestToOldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // skipped
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    peopleByLastName = people.slice().sort()
+    console.log(peopleByLastName)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+    const instances = data.reduce((values, vehicle) => {
+      if (!values[vehicle]) {
+        values[vehicle] = 0
+      }
+      values[vehicle]++
+      return values
+    }, {})
+    console.log(instances)
 
   </script>
 </body>
+
 </html>
